<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primarySurface">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/arrow_back"
        app:tint="@color/textPrimary"
        android:contentDescription="@string/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"/>

    <ImageView
        android:id="@+id/imgDog"
        android:layout_width="350dp"
        android:layout_height="380dp"
        android:src="@drawable/feeding"
        android:contentDescription="@string/onboard_pet"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/indicatorLayout"
        android:layout_margin="16dp"/>

    <LinearLayout
        android:id="@+id/indicatorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/imgDog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/onboard_dots_cd">

        <View android:layout_width="10dp" android:layout_height="10dp" android:layout_margin="5dp" android:background="@drawable/dot_inactive"/>
        <View android:layout_width="10dp" android:layout_height="10dp" android:layout_margin="5dp" android:background="@drawable/dot_inactive"/>
        <View android:layout_width="10dp" android:layout_height="10dp" android:layout_margin="5dp" android:background="@drawable/dot_active"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/textContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/bg_card_round"
        app:layout_constraintTop_toBottomOf="@id/indicatorLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboard_title_3"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/textPrimary"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/txtSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboard_desc_3"
            android:textSize="14sp"
            android:textColor="@color/textSecondary"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetStarted"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginTop="56dp"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textContainer" />
</androidx.constraintlayout.widget.ConstraintLayout>